--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
             .left-feathers {
                 height: 40vh;
                 max-width: 90vw;
+                bottom: 10px;
             }
 
             .right-feathers {
