--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             position: relative;
             display: grid;
             grid-template-columns: auto auto;
-            column-gap: 20px;
+            /* column-gap: 20px; */
+            margin-top: 50px;
             width: fit-content;
             width: -moz-max-content;
             justify-items: center;
@@ -111,13 +112,14 @@
         }
 
         .project-by>img {
+            padding-left: 20px;
             height: 70%;
             border-radius: 4px;
         }
 
         .about {
             position: relative;
-            width: 90%;
+            width: 70%;
             margin-top: 10px;
             margin-bottom: 90px;
         }
@@ -174,16 +176,58 @@
             font-weight: 600;
         }
 
+        ::-webkit-scrollbar {
+            background-color: #f5f5f500;
+            width: 10px;
+        }
+
+        /* background of the scrollbar except button or resizer */
+        ::-webkit-scrollbar-track {
+            background-color: rgba(245, 245, 245, 0);
+        }
+
+        ::-webkit-scrollbar-track:hover {
+            background-color: #f4f4f4
+        }
+
+        /* scrollbar itself */
+        ::-webkit-scrollbar-thumb {
+            background-color: #babac0;
+            border-radius: 16px;
+            /* border: 5px solid #f5f5f5; */
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: #a0a0a5;
+        }
+
+        /* set button(top and bottom of the scrollbar) */
+        ::-webkit-scrollbar-button {
+            display: none
+        }
+
         @media(max-width: 600px) {
             .left-feathers {
-                height: 40vh;
                 max-width: 90vw;
                 bottom: 10px;
             }
 
+            .left-feathers>img {
+                width: 70%;
+                left: -70px;
+            }
+
             .right-feathers {
-                height: 40vh;
                 max-width: 90vw;
+            }
+
+            .right-feathers>img {
+                width: 70%;
+                left: 90px;
+            }
+
+            .about {
+                width: 90%;
             }
 
             .project-by>img {
@@ -207,7 +251,8 @@
             }
         }
     </style>
-    <title>Document</title>
+    <title>Hermes</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
 
 <body>
@@ -256,18 +301,13 @@
                 <img src="./img/right_feathers.png" alt="">
             </div>
             <div class="rest-container">
-                <div class="project-by" data-aos="fade-down">
-                    <p>A project developed by </p>
-                    <img src="./img/dsclogo.png" alt="">
-                </div>
                 <div class="about" data-aos="fade-down">
                     <h1>About</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus odio non natus nulla, quod
-                        quas, exercitationem minus error ducimus cum officia velit autem aut fugit! Mollitia delectus
-                        expedita quibusdam rem!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione ex voluptatem libero itaque
-                        optio sit, placeat officiis minus natus sunt aspernatur ut? Ea similique velit atque dolore id
-                        quae eligendi.</p>
+                    <p>The Hermes project is a live polling website which allows the operating party or organiser to
+                        create events while generating unique event codes. Under an established event, the organiser can
+                        add multiple polls, quizzes or feedback as found necessary.</p>
+                    <p> Other users can participate in the respective event by entering the valid event code and get
+                        engaged in the various activities of that particular event LIVE.</p>
                     <p>Visit the DSC VIT's official website to take a glimpse of our other projects, at <a
                             target="_blank" href="https://dscvit.com">dscvit.com</a></p>
                 </div>
@@ -277,12 +317,12 @@
                 </div>
                 <div class="creators" data-aos="fade-up">
                     <h1>Behind the Project</h1>
-                    <p>I don't know what to put in here, so i'm writing this!</p>
+                    <p>Check out the people behind the platform!</p>
                     <div class="creator-grid">
-                        <div class="ele">
+                        <div class="ele" onclick="window.open('https://github.com/mdhishaamakhtar/')">
                             Md Hishaam
                         </div>
-                        <div class="ele">
+                        <div class="ele" onclick="window.open('https://github.com/prakhar0912')">
                             Prakhar Soni
                         </div>
                         <div class="ele">
@@ -294,20 +334,17 @@
                         <div class="ele">
                             Angad
                         </div>
-                        <div class="ele">
-                            Idk
-                        </div>
-                        <div class="ele">
-
-                        </div>
                     </div>
                     <div class="issues">
                         <p>If you face any issues please email us at,</p>
                         <a href="mailto:emailus@gmail.com">emailus@gmail.com</a>
                     </div>
                 </div>
+                <div class="project-by">
+                    <p>A project developed by </p>
+                    <img src="./img/dsclogo.png" alt="">
+                </div>
             </div>
-
         </div>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
