--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </div>
                 <div class="creators" data-aos="fade-up">
                     <h1>Behind the Project</h1>
-                    <p>Check out the people behind the platform!</p>
+                    <p>The combined efforts of the members of the DSC technical team helped materialise this project!</p>
                     <div class="creator-grid">
                         <div class="ele" onclick="window.open('https://github.com/mdhishaamakhtar/')">
                             Md Hishaam
