--- a/create/main2.html
+++ b/create/main2.html
@@ -17,7 +17,7 @@
 <body>
     <div class="mobile options-container-mobile">
         <div class="nav-container">
-            <p class="home-section tab-item" id="home-control">Home</p>
+            <p class="home-section tab-item tab-border" id="home-control">Home</p>
             <p class="quiz-section tab-item" id="quiz-control">Quiz</p>
             <p class="poll-section tab-item" id="poll-control">Poll</p>
             <p class="feedback-section tab-item" id="feedback-control">Feedback</p>
@@ -68,7 +68,7 @@
             <button id="user_login" class="main-button">Login</button>
         </div>
         <div class="main">
-            <div class="nav-control mobile-grid">
+            <div class="nav-control">
                 <i class="material-icons ham">menu</i>
                 <p class="nav-text">Home</p>
             </div>
