--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
         .left-feathers {
             position: fixed;
             left: 0;
-            bottom: 50px;
+            bottom: 0px;
             z-index: 1;
-            opacity: 0.7;
+            opacity: 1;
+
         }
 
         .left-feathers>img {
             position: relative;
             left: -60px;
+            width: 80%;
         }
 
         .right-feathers {
@@ -82,12 +84,13 @@
             right: 0;
             padding-top: 10px;
             z-index: 1;
-            opacity: 0.7;
+            opacity: 1;
         }
 
         .right-feathers>img {
             position: relative;
             left: 40px;
+            width: 80%;
         }
 
         .rest-container {
