--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="rest-container">
                 <div class="about" data-aos="fade-down">
                     <h1>About</h1>
-                    <p>The Hermes project is a live polling website which allows the operating party or organiser to
+                    <p>Thea Hermes project is a live polling website which allows the operating party or organiser to
                         create events while generating unique event codes. Under an established event, the organiser can
                         add multiple polls, quizzes or feedback as found necessary.</p>
                     <p> Other users can participate in the respective event by entering the valid event code and get
