button changes mobile

--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
                 border-top: rgb(40, 131, 251) solid 1px;
             }
 
+            .main-button{
+                width: 60%;
+            }
+
             .admin-side {
                 padding-bottom: 60px;
             }
