--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
             font-weight: 500;
             font-size: 1.2rem;
             border-radius: 7px;
-            ;
         }
 
         .features {
@@ -224,21 +223,23 @@
 
             .sections>div:first-child {
                 border-right: none;
+                padding-bottom: 50px;
                 border-bottom: rgb(40, 131, 251) solid 1px;
             }
 
             .sections>div:last-child {
                 border-left: none;
-                border-top: rgb(40, 131, 251) solid 1px;
+                padding-top: 10px;
+                border-top: none;
             }
 
-            .main-button{
+            .main-button {
                 width: 60%;
             }
 
-            .admin-side {
-                padding-bottom: 60px;
-            }
+            /* .admin-side {
+                /* padding-bottom: 130px; 
+            } */
 
             .right-feathers>img {
                 width: 20vw;
@@ -247,6 +248,14 @@
             .left-feathers>img {
                 width: 20vw;
             }
+
+            .sections>div>p {
+                width: 90%;
+                margin: auto;
+                margin-bottom: 40px;
+            }
+
+
         }
     </style>
     <title>Hermes</title>
@@ -263,7 +272,7 @@
         </div>
         <div class="main-logo" data-aos="zoom-in" data-aos-delay="200" data-aos-once="true">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 189.622 70.271">
-                <g id="Group_354" data-name="Group 354" transform="translate(-89.172 -74)" fill = "rgb(40, 131, 251)">
+                <g id="Group_354" data-name="Group 354" transform="translate(-89.172 -74)" fill="rgb(40, 131, 251)">
                     <g id="Group_349" data-name="Group 349" transform="translate(89.172 74)" class="logo-color">
                         <path id="Path_132" data-name="Path 132"
                             d="M711.584,398.894l-7.2-.9a1.6,1.6,0,0,0-1.681.976c-2.682,6.464-16.158,38.6-19.963,41.089-.127.083-.253.164-.373.255-1.338,1.023-8.456,6.362-11.28,6.362-1.431,0-1.312.746-.763,1.553a4.63,4.63,0,0,0,3.837,2H687.5a5.91,5.91,0,0,0,4.018-1.576l14.021-13a24.421,24.421,0,0,1,8.525-5.137l7.624-2.672a2.016,2.016,0,0,0,1.349-1.9v-4.558a5.034,5.034,0,0,0-.857-2.81l-3.426-5.093a4.766,4.766,0,0,1-.784-3.168l.182-1.7a.335.335,0,0,0-.453-.348l-4.316,1.65-1.066-10.262A.847.847,0,0,0,711.584,398.894Z"
@@ -290,7 +299,7 @@
                         transform="translate(109.766 113.059) rotate(23.201)" fill="#fff" />
                     <rect id="Rectangle_44" data-name="Rectangle 44" width="28.418" height="3.043"
                         transform="translate(133.403 102.119) rotate(84.846)" fill="#fff" />
-                    <text id="Hermes" fill = "black" transform="translate(155.794 136)" font-size="30"
+                    <text id="Hermes" fill="black" transform="translate(155.794 136)" font-size="30"
                         font-family="Montserrat-Bold, Montserrat" font-weight="700">
                         <tspan x="0" y="0">Hermes</tspan>
                     </text>
