--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             text-align: center;
             margin: 0;
         }
-
+        .container{
+            overflow-x: hidden;
+        }
         p {
             line-height: 1.4;
             font-size: 1.15rem;
@@ -40,32 +42,37 @@
             position: absolute;
             right: 0;
             top: 0;
+            overflow: hidden;
         }
 
         .right-feathers>img {
-            width: 10vw;
+            position: relative;
+            left: 4.6vw;
+            width: 20vw;
+            top: -2.5vw;
         }
 
         .left-feathers>img {
-            width: 10vw;
+            position: relative;
+            width: 20vw;
+            left: -5vw;
+            top: -3vw;
         }
 
         .left-feathers {
             position: absolute;
             left: 0;
             top: 0;
+            overflow: hidden;
         }
 
         .main-logo {
-            width: fit-content;
             margin: 30px auto;
             margin-bottom: 50px;
-            /* fill: var(--main-color); */
         }
 
-        .main-logo>svg {
-            width: fit-content;
-            height: 70px;
+        .main-logo>img {
+            width: 12.5vw;
         }
 
         .about {
@@ -95,7 +102,7 @@
         }
 
         .sections>div:first-child {
-            border-right: rgb(40, 131, 251) solid 1px;
+            border-right: rgb(97, 165, 255) solid 1px;
         }
 
         .sections>div:last-child {
@@ -160,6 +167,14 @@
             /* fill: black; */
             font-weight: 900;
             font-size: 2.7rem
+        }
+
+        ::-webkit-scrollbar {
+            background-color: #f5f5f5;
+            width: 9px;
+        }
+        ::-webkit-scrollbar-thumb{
+            background-color: rgb(40, 131, 251);
         }
 
         @media(max-width: 600px) {
@@ -242,11 +257,12 @@
             } */
 
             .right-feathers>img {
-                width: 20vw;
+                width: 30vw;
+                left: 5vw;
             }
 
             .left-feathers>img {
-                width: 20vw;
+                width: 30vw;
             }
 
             .sections>div>p {
@@ -255,6 +271,10 @@
                 margin-bottom: 40px;
             }
 
+
+            .main-logo>img {
+                width: 41vw;
+            }
 
         }
     </style>
@@ -271,40 +291,7 @@
             <img src="./img/left_feathers.png" alt="">
         </div>
         <div class="main-logo" data-aos="zoom-in" data-aos-delay="200" data-aos-once="true">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 189.622 70.271">
-                <g id="Group_354" data-name="Group 354" transform="translate(-89.172 -74)" fill="rgb(40, 131, 251)">
-                    <g id="Group_349" data-name="Group 349" transform="translate(89.172 74)" class="logo-color">
-                        <path id="Path_132" data-name="Path 132"
-                            d="M711.584,398.894l-7.2-.9a1.6,1.6,0,0,0-1.681.976c-2.682,6.464-16.158,38.6-19.963,41.089-.127.083-.253.164-.373.255-1.338,1.023-8.456,6.362-11.28,6.362-1.431,0-1.312.746-.763,1.553a4.63,4.63,0,0,0,3.837,2H687.5a5.91,5.91,0,0,0,4.018-1.576l14.021-13a24.421,24.421,0,0,1,8.525-5.137l7.624-2.672a2.016,2.016,0,0,0,1.349-1.9v-4.558a5.034,5.034,0,0,0-.857-2.81l-3.426-5.093a4.766,4.766,0,0,1-.784-3.168l.182-1.7a.335.335,0,0,0-.453-.348l-4.316,1.65-1.066-10.262A.847.847,0,0,0,711.584,398.894Z"
-                            transform="translate(-669.938 -379.955)" />
-                        <g id="Group_348" data-name="Group 348" transform="translate(43.733 0)">
-                            <path id="Path_133" data-name="Path 133"
-                                d="M997.171,281.677h0a13.762,13.762,0,0,1,8.772-5.966L1028.992,271h0a14.264,14.264,0,0,1-10.006,6.987Z"
-                                transform="translate(-994.45 -271)" />
-                            <path id="Path_134" data-name="Path 134"
-                                d="M978.122,344.39,978,347.2l21.537-3.9a7.614,7.614,0,0,0,6.1-5.939h0l-25.451,4.663A2.516,2.516,0,0,0,978.122,344.39Z"
-                                transform="translate(-978 -327.94)" />
-                            <path id="Path_135" data-name="Path 135"
-                                d="M979.475,408.117l.235,2.355a1.69,1.69,0,0,0,1.993,1.493l13.555-2.542a5.8,5.8,0,0,0,4.733-5.7h0Z"
-                                transform="translate(-979.266 -384.88)" />
-                        </g>
-                        <circle id="Ellipse_16" data-name="Ellipse 16" cx="3.194" cy="3.194" r="3.194"
-                            transform="translate(40.326 24.985)" fill="#fff" />
-                    </g>
-                    <rect id="Rectangle_41" data-name="Rectangle 41" width="13.82" height="3.339"
-                        transform="translate(103.975 130.317) rotate(33.813)" fill="#fff" />
-                    <rect id="Rectangle_42" data-name="Rectangle 42" width="13.82" height="3.185"
-                        transform="translate(117.543 97.793) rotate(10.519)" fill="#fff" />
-                    <rect id="Rectangle_43" data-name="Rectangle 43" width="28.418" height="3.747"
-                        transform="translate(109.766 113.059) rotate(23.201)" fill="#fff" />
-                    <rect id="Rectangle_44" data-name="Rectangle 44" width="28.418" height="3.043"
-                        transform="translate(133.403 102.119) rotate(84.846)" fill="#fff" />
-                    <text id="Hermes" fill="black" transform="translate(155.794 136)" font-size="30"
-                        font-family="Montserrat-Bold, Montserrat" font-weight="700">
-                        <tspan x="0" y="0">Hermes</tspan>
-                    </text>
-                </g>
-            </svg>
+            <img src="./img/hermes-logo.png" alt="">
         </div>
         <div class="about" data-aos="zoom-in-down" data-aos-delay="500" data-aos-once="true">
             <h1>About</h1>
