--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
         </div>
         <div class="about" data-aos="zoom-in-down" data-aos-delay="500" data-aos-once="true">
             <h1>About</h1>
-            <p>The Hermes project is a live polling website which allows the operating party or organiser to create events while generating unique event codes. Under an established event, the organiser can add multiple polls, quizzes or feedback as found necessary.?</p>
-            <p>Other users can participate in the respective event by entering the valid event code and get engaged in the various activities of that particular event LIVE.!</p>
+            <p>The Hermes project is a live polling website which allows the operating party or organiser to create events while generating unique event codes. Under an established event, the organiser can add multiple polls, quizzes or feedback as found necessary?</p>
+            <p>Other users can participate in the respective event by entering the valid event code and get engaged in the various activities of that particular event LIVE!</p>
             <p>Visit the DSC VIT's website to take a glimpse of our other projects at <a href="https://dscvit.com"
                     target="_blank">dscvit.com</a></p>
         </div>
