--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
         // });
         if (window.innerWidth < 600) {
             document.querySelector(".user-side").removeAttribute('data-aos-delay')
+            document.querySelector(".admin-side").removeAttribute('data-aos-delay')
         }
         AOS.init();
 
