--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         </div>
         <div class="features" id="features" data-aos="fade-down" data-aos-anchor="#features" data-aos-once="true">
             <h1>Features</h1>
-            <p>As a creator you can create an Event which can consist of the following activities and users can engage with them in real time!</p>
+            <p>As a creator you can create an Event for which the following activities can be added. The users can engage with them in real time!</p>
             <div class="features-grid">
                 <div class="ele">
                     <div class="circle">
