--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <div class="footer">
             <div class="left-section">
                 <p>For any queries please contact us at,</p>
-                <a href="mailto:prakhar0912@gmail.com">emailus@gmail.com</a>
+                <a href="mailto:dscvitvellore@gmail.com">dscvitvellore@gmail.com</a>
             </div>
             <div class="right-section">
                 <p>A project developed by</p>
