--- a/create/main2.html
+++ b/create/main2.html
@@ -25,7 +25,7 @@
     </div>
     <main>
         <div class="header">
-            <svg xmlns="http://www.w3.org/2000/svg" height="70.271" viewBox="0 0 189.622 70.271">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 189.622 70.271">
                 <g id="Group_354" data-name="Group 354" transform="translate(-89.172 -74)">
                     <g id="Group_349" data-name="Group 349" transform="translate(89.172 74)" class="logo-color">
                         <path id="Path_132" data-name="Path 132"
@@ -483,10 +483,12 @@
                                                     <textarea rows="3" type="text" id="feedback_name" class="main-input"
                                                         placeholder="Enter Feedback Question"></textarea>
                                                     <div class="feedback-actions">
-                                                        <button id="add_feedback_btn" class="main-button 1" onclick="addFeedbackQuestion(this)">+ Add
+                                                        <button id="add_feedback_btn" class="main-button 1"
+                                                            onclick="addFeedbackQuestion(this)">+ Add
                                                             Question</button>
-                                                        <button class="main-button feedback 1 del-btn" id="del_question_btn"
-                                                            onclick="delQuestion(this)">Delete Question</button>
+                                                        <button class="main-button feedback 1 del-btn"
+                                                            id="del_question_btn" onclick="delQuestion(this)">Delete
+                                                            Question</button>
                                                     </div>
                                                 </div>
                                             </div>
