--- a/create/main2.html
+++ b/create/main2.html
@@ -11,7 +11,10 @@
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-    <title>Hermes | Admin</title>
+    <title>Hermes | Create</title>
+    <meta name="description"
+        content="A unique solution for anyone who wants to expose their audiences to quizzes, polls or feedback sessions!">
+    <meta name=”robots” content="index, nofollow">
 </head>
 
 <body>
