--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             padding-left: 40px;
         }
 
-        .circle > img{
+        .circle>img {
             position: relative;
             margin: auto;
             width: 50px;
@@ -173,12 +173,12 @@
 
         }
 
-        strong{
+        strong {
             font-size: 1.2rem;
             font-weight: 500;
         }
 
-        .circle{
+        .circle {
             position: relative;
             background-color: white;
             width: 90px;
@@ -289,7 +289,7 @@
                 width: 30vw;
             }
 
-            .ele{
+            .ele {
                 margin: 20px 0;
             }
 
@@ -304,10 +304,11 @@
                 width: 41vw;
             }
 
-            .features-grid{
+            .features-grid {
                 grid-template-columns: auto;
             }
-            .circle > img{
+
+            .circle>img {
                 height: 100%;
                 width: 60px;
             }
@@ -315,6 +316,9 @@
         }
     </style>
     <title>Hermes</title>
+    <meta name="description"
+        content="Create quizzes, polls or feedback sessions or take part in an event set up for you!">
+    <meta name=”robots” content="index, follow">
     <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
 
@@ -331,8 +335,11 @@
         </div>
         <div class="about" data-aos="zoom-in-down" data-aos-delay="500" data-aos-once="true">
             <h1>About</h1>
-            <p>The Hermes project is a live polling website which allows the operating party or organiser to create events while generating unique event codes. Under an established event, the organiser can add multiple polls, quizzes or feedback as found necessary.</p>
-            <p>Other users can participate in the respective event by entering the valid event code and get engaged in the various activities of that particular event LIVE!</p>
+            <p>The Hermes project is a live polling website which allows the operating party or organiser to create
+                events while generating unique event codes. Under an established event, the organiser can add multiple
+                polls, quizzes or feedback as found necessary.</p>
+            <p>Other users can participate in the respective event by entering the valid event code and get engaged in
+                the various activities of that particular event LIVE!</p>
             <p>Visit the DSC VIT's website to take a glimpse of our other projects at <a href="https://dscvit.com"
                     target="_blank">dscvit.com</a></p>
         </div>
@@ -344,13 +351,15 @@
             </div>
             <div class="user-side" data-aos="fade-left" data-aos-delay="700" data-aos-once="true">
                 <h1>Participate</h1>
-                <p>If you wish to engage in any of the activities created for you, please visit the Participate page!</p>
-                <button class="main-button" onclick = "window.open('./participate/event2.html')">Participate</button>
+                <p>If you wish to engage in any of the activities created for you, please visit the Participate page!
+                </p>
+                <button class="main-button" onclick="window.open('./participate/event2.html')">Participate</button>
             </div>
         </div>
         <div class="features" id="features" data-aos="fade-down" data-aos-anchor="#features" data-aos-once="true">
             <h1>Features</h1>
-            <p>As a creator you can create an Event for which the following activities can be added. The users can engage with them in real time!</p>
+            <p>As a creator you can create an Event for which the following activities can be added. The users can
+                engage with them in real time!</p>
             <div class="features-grid">
                 <div class="ele">
                     <div class="circle">
@@ -360,14 +369,14 @@
 
                 </div>
                 <div class="ele">
-                    
+
                     <div class="circle">
                         <img src="./img/poll.svg" alt="">
                     </div>
                     <strong>Create or take part in a Live Polling session!</strong>
                 </div>
                 <div class="ele">
-                    
+
                     <div class="circle">
                         <img src="./img/feedback.svg" alt="">
                     </div>
