--- a/participate/event2.html
+++ b/participate/event2.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <title>Hermes | Join Event</title>
+    <meta name="description" content="Participate in an Event created for you!">
+    <meta name=”robots” content="index, nofollow">
     <style>
         :root {
             --main-color: #2784FB;
