--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </style>
     <title>Hermes</title>
     <meta name="description"
-        content="Create quizzes, polls or feedback sessions or take part in an event set up for you!">
+        content="Create quizzes, polls or feedback sessions or Participate in an event set up for you!">
     <meta name=”robots” content="index, follow">
     <link rel="icon" type="image/png" href="./img/favicon.png">
 </head>
